--- a/Template/Template.vcxproj
+++ b/Template/Template.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="..\src\CollisionManager.cpp" />
     <ClCompile Include="..\src\Condition.cpp" />
     <ClCompile Include="..\src\DecisionTree.cpp" />
+    <ClCompile Include="..\src\FloatCondition.cpp" />
     <ClCompile Include="..\src\LOSCondition.cpp" />
     <ClCompile Include="..\src\MoveToLOSAction.cpp" />
     <ClCompile Include="..\src\MoveToPlayerAction.cpp" />
@@ -221,6 +222,7 @@
     <ClInclude Include="..\src\ConditionNode.h" />
     <ClInclude Include="..\src\Config.h" />
     <ClInclude Include="..\src\DecisionTree.h" />
+    <ClInclude Include="..\src\FloatCondition.h" />
     <ClInclude Include="..\src\Heuristic.h" />
     <ClInclude Include="..\src\LOSCondition.h" />
     <ClInclude Include="..\src\MoveToLOSAction.h" />
