--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -210,6 +210,12 @@
     <ClCompile Include="..\src\MoveToPlayer.cpp">
       <Filter>StateMachine\Actions</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Transition.cpp">
+      <Filter>StateMachine\CoreComponents</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\State.cpp">
+      <Filter>StateMachine\CoreComponents</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\StartScene.h">
@@ -424,6 +430,12 @@
     </ClInclude>
     <ClInclude Include="..\src\MoveToPlayer.h">
       <Filter>StateMachine\Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Transition.h">
+      <Filter>StateMachine\CoreComponents</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\State.h">
+      <Filter>StateMachine\CoreComponents</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
